
 - The compiler now understands function type proclamations with &optional
   values.

 - The compiler now uses THE forms with a VALUES type.

 - If file A.lsp explicitely loads B.lsp to use a package that is only defined
   in B, then ECL signaled an error in the compiled version of A even after
   this one had required B.lsp.

 - ECL accepts FTYPE proclamations for SETF-functions.

* Visible changes:

 - Significant speedup in access to hash tables of up to 30% by writing
   specialized loops for EQ, EQL, EQUAL, EQUALP and package hash tables.

 - New function EXT:ENVIRON returns the list of strings that makes up the
   process environment. This is the equivalent of POSIX (char **environ)
   and Windows' GetEnvironmentStrings.

 - EXT:RUN-PROGRAM now accepts a keyword argument, :ENVIRON, which is a
   list of strings configuring the environment of the child process.

 - EXT:RUN-PROGRAM returns as second value an EXT:EXTERNAL-PROCESS structure,
   which supports the queries EXT:EXTERNAL-PROCESS-{PID,INPUT,OUTPUT,STATUS},
   following CCL's conventions.

 - New function EXT:EXTERNAL-PROCESS-WAIT to wait indefinitely or simply query
   the status of a process.

 - ECL implements a new garbage collector marking mode which at the overhead of
   one word per object achieves precise marking of heap objects, reducing
   accidental data retention and improving the time spent in garbage
   collection.

 - ECL now ships with ASDF version 1.604

 - The variables C:*USER-CC-FLAGS* and C:*USER-LD-FLAGS* are lists of strings
   which can be customized by the user to change the behavior of the C compiler
   and the linker. Note, however, that the flags that ECL uses may take
   priority.

 - In the C code we are beginning to use GCC's attributes (__attribute__) and
   branch annotation (__builtin_expect) to decrease the size of code that
   checks for errors and improve overall speed.

 - When printing compiler notes, instead of printing the macroexpanded form,